--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,10 @@ on:
   push:
     tags:
       - "v*"
-
+permissions:
+  contents: "write"
+  packages: "write"
+  pull-requests: "read"
 jobs:
 
   build:
